feat: implement h2 and sqlite storage types